new website text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <p> This is a <em>really high quality</em> interactive website. The field of fluid dynamics has been advanced immeasurably by the presence of this website.</p>
         <p> Python >> MATLAB </p>
+        <p> This is some more information on the high quality website</p>
     </div>
     <button id='coolbutton' class='animate'>Click for a random number</button>
     <script  src="scripts/main.js"></script>
