something about lemona

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         <p> This is a <em>really high quality</em> interactive website. The field of fluid dynamics has been advanced immeasurably by the presence of this website.</p>
         <p> Python >> MATLAB </p>
+        <p> The website is now not terrible! </p>
+        <h2>Lemona sucks, no one likes her :(</h2>
     </div>
     <button id='coolbutton' class='animate'>Click for a random number</button>
     <script  src="scripts/main.js"></script>
