--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p> Python >> MATLAB </p>
         <p> The website is now not terrible! </p>
         <h2>Lemona sucks, no one likes her :(</h2>
+        <h3> Rob is awesome</h3>
     </div>
     <button id='coolbutton' class='animate'>Click for a random number</button>
     <script  src="scripts/main.js"></script>
