--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p> This is a <em>really high quality</em> interactive website. The field of fluid dynamics has been advanced immeasurably by the presence of this website.</p>
         <p> Python >> MATLAB </p>
         <p> The website is now not terrible! </p>
-        <h2>Lemona sucks, no one likes her :(</h2>
+        <h2>Brian is great, everyone likes him!</h2>
         <h3> Rob is awesome</h3>
     </div>
     <button id='coolbutton' class='animate'>Click for a random number</button>
