Correct index.html
Python >>>> Matlab

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1><img src="assets/EFMLLogo.png" alt="EFML Logo" height="50px"/> Rob's Amazing EFML Website</h1>
 
         <p> This is a <em>really high quality</em> interactive website. The field of fluid dynamics has been advanced immeasurably by the presence of this website.</p>
-        <p> Python >> MATLAB </p>
+        <p> Python >>>> MATLAB </p>
     </div>
     <button id='coolbutton' class='animate'>Click for a random number</button>
     <script  src="scripts/main.js"></script>
